Cleaned up code, cleaned TOML and added possible fix for 5+ panel doors

--- a/FyneApp.toml
+++ b/FyneApp.toml
@@ -4,7 +4,7 @@ Website = "https://github.com/keybangz"
 Icon = "Icon.png"
 Name = "GDAMA Toolbox"
 ID = "com.gdamatoolbox.app"
-Version = 0.1.0
+Version = "0.1.0"
 Build = 1
 
 [LinuxAndBSD]
