--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,6 +12,7 @@ on:
 jobs:
 
   build:
+    name: Create Fyne App
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -20,12 +21,31 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.23'
-
+        
     - name: Get Fyne-Cross
       run: go install github.com/fyne-io/fyne-cross@latest
-
-    - name: Pull Latest Windows Image
-      run: fyne-cross windows --pull
       
     - name: Build Fyne App
       run: fyne-cross windows -arch=amd64
+
+    - name: Read Fyne Version
+      uses: SebRollen/toml-action@v1.2.0
+      id: app-version
+      with:
+        file: 'FyneApp.toml'
+        field: 'Details.Version'
+
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+      with:
+          tag_name: ${{ app-version }}
+          release_name: Release ${{ app-version }}
+          body: |
+            Changes in this Release
+            - First Change
+            - Second Change
+          draft: false
+          prerelease: false
