--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,6 +9,9 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  APP_VERSION: 0.0
+
 jobs:
 
   build:
@@ -35,14 +38,17 @@ jobs:
         file: 'FyneApp.toml'
         field: 'Details.Version'
 
+    - name: Pass Fyne Version to Release Version
+      run: echo "steps.read_toml.outputs.value" >> "${{ env.APP_VERSION }}"
+
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
       with:
-          tag_name: ${{ app-version }}
-          release_name: Release ${{ app-version }}
+          tag_name: ${{ $APP_VERSION }}
+          release_name: Release ${{ $APP_VERSION }}
           body: |
             Changes in this Release
             - First Change
