--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -47,8 +47,8 @@ jobs:
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
       with:
-          tag_name: ${{ $APP_VERSION }}
-          release_name: Release ${{ $APP_VERSION }}
+          tag_name: ${{ env.APP_VERSION }}
+          release_name: Release ${{ env.APP_VERSION }}
           body: |
             Changes in this Release
             - First Change
