--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -39,19 +39,4 @@ jobs:
         field: 'Details.Version'
 
     - name: Pass Fyne Version to Release Version
-      run: echo "${{ steps.read_toml.outputs.value }}" >> "${{ env.APP_VERSION }}"
-
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-      with:
-          tag_name: ${{ env.APP_VERSION }}
-          release_name: Release ${{ env.APP_VERSION }}
-          body: |
-            Changes in this Release
-            - First Change
-            - Second Change
-          draft: false
-          prerelease: false
+      run: echo "APP_VERSION=${{ steps.read_toml.outputs.value }}" >> "${{ $GITHUB_ENV }}"
