--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,7 +1,7 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Go
+name: Build & Release App
 
 on:
   push:
@@ -39,4 +39,4 @@ jobs:
         field: 'Details.Version'
 
     - name: Pass Fyne Version to Release Version
-      run: echo "APP_VERSION=${{ steps.read_toml.outputs.value }}" >> "${{ $GITHUB_ENV }}"
+      run: echo "APP_VERSION=${{ steps.read_toml.outputs.value }}" >> "${{ $APP_VERSION }}"
