--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -41,5 +41,12 @@ jobs:
     - name: Pass Fyne Version to Release Version
       run: echo "APP_VERSION=${{ steps.read_toml.outputs.value }}" >> $GITHUB_ENV
 
-    - name: Test Env variable
-      run: echo "${{ env.APP_VERSION }}"
+    - name: Create Release
+    - uses: "marvinpinto/action-automatic-releases@latest"
+      with:
+        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        prerelease: false
+        title: "${{ env.APP_VERSION }}"
+        path: "./fyne-cross/bin/windows-amd64/"
+        files: |
+          *.exe
